@@ -1,3 +1,7 @@
+2007-12-29  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* ExitCodeIsLimitedOnUnixTest.cs: New. Unit tests by Daniel Abramov
+
 2007-12-29  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* NewLineLiteralTest.cs: Remove unused variable (compiler warning).
